--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -18,6 +18,14 @@ body {
   margin: 0 auto;
 }
 
+.navbar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 15px 0;
+}
+
 /* Cards */
 .card {
   background: white;
